# C_playground

C test/: CMakeLists.txt  main.c
Sdl2/: CMakeLists.txt  main.cpp
viktor/: CMakeLists.txt  main.cpp
